~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-6.0.2.0
{Features Added}
* DebugMode (WIP)
** If DebugMode is enabled you can view how many items are dropped from a mob with custom drops from ArmorPlus' Config (ex: "Ender Dragon Dropped: armorplus:ender_dragon_scale x 12)
* A new Dev Tool (WIP)
** Prints the current (exact) health of the entity, that the item was used on. (ex: "[ Zombie ] - Health: 20")
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-6.0.1.0
{Features Added}
* Arrows
** Lapis Arrow (Gives the enemy Nausa)
** Redstone Arrow (Gives the enemy Slowness)
** Lava Arrow (Sets the enemy on Fire)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-6.0.0.1
{Bugs Fixed}
* Lava Crystal Ore spawn being between y level 58 and 8 rather than 16 and 6
{Features Added}
* Added the ability to disable the DeBuffs from the Ultimate Armor
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-6.0.0.0
{Features Added}
* The One Probe Integration
* In Game Config GUI support
* Added Advanced Armor Forge
* Added a new Crafting System
* Added Arrows (WIP)
* Fixed Bows
* Added Elytra Crafting
{Features Changed}
* Nerfed the Crafting recipes cost of all Tinkers Armors in expert mode
* Replaced a lot of the old recipes, changed them and moved them to the Advanced Armor Forge
* Tweaked the Configuration File (I can't promise its gonna be for last)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-5.0.5.1
{Bugs Fixed}
* ArmorForge's GUI not opening
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
ArmorPlus 1.10.2-5.0.5.0
{Features Changed}
* ArmorPlus now requires TheDragonCore
* ArmorPlus is now officially a project of TheDragonTeam7
* Some Command Tweaks
{Features Added}