@@ -1,0 +1,10 @@
+{
+	"variants": {
+		"normal": [
+			{ "model": "armorplus:lava_nether_brick" },
+			{ "model": "armorplus:lava_nether_brick", "y": 90 },
+			{ "model": "armorplus:lava_nether_brick", "y": 180 },
+			{ "model": "armorplus:lava_nether_brick", "y": 270 }
+		]
+	}
+}
