@@ -1,10 +1,0 @@
-{
-	"variants": {
-		"normal": [
-			{ "model": "armorplus:SteelOre" },
-			{ "model": "armorplus:SteelOre", "y": 90 },
-			{ "model": "armorplus:SteelOre", "y": 180 },
-			{ "model": "armorplus:SteelOre", "y": 270 }
-		]
-	}
-}
