@@ -222,7 +222,6 @@ item.TheUltimateBootsRight.name=The Ultimate Boots Right
 #Blocks
 tile.CompressedObsidian.name=Compressed Obsidian
 tile.BlockLavaCrystal.name=Lava Crystal Block
-tile.SteelOre.name=Steel Ore
 tile.SteelBlock.name=Block of Steel
 tile.ElectricalBlock.name=Electrical Block
 tile.ArmorForge.name=Armor Forge
