@@ -1,6 +1,6 @@
 {
   "parent": "block/cube_all",
   "textures": {
-    "all": "armorplus:blocks/SteelOre"
+    "all": "armorplus:blocks/lava_nether_brick"
   }
 }
