@@ -1,3 +1,0 @@
-{
-  "parent": "armorplus:block/SteelOre"
-}
