@@ -1,0 +1,3 @@
+{
+  "parent": "armorplus:block/lava_nether_brick"
+}
