@@ -1,0 +1,5 @@
+{
+    "animation": {
+        "frametime": 5
+    }
+}
